master/taass/progetto-TAASS/kubernetes/front-end/front-end-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
spec:
  rules:
    - host: webui.mymusicspace.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-svc
                port:
                  number: 5173
